new file:   Ejemplo2.ipynb 	modified:   Ejemplos.ipynb 	modified:   datos/entidades.csv 	new file:   datos/modalidades.csv

--- a/Ejemplos.ipynb
+++ b/Ejemplos.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,12 +35,13 @@
     "\n",
     "from sodapy import Socrata\n",
     "identificador_columnas=pd.read_csv('datos/identificador_columnas.csv')\n",
-    "identificador_columnas=identificador_columnas[['Unificado',valor_columnas[i], 'API_DA_S_II']]\n",
+    "valor_columnas={'SECOP I':'API_DA_S_I','SECOP II':'API_DA_S_II','TVEC':'API_DA_S_TVEC'}\n",
+    "identificador_columnas=identificador_columnas[['Unificado','API_DA_S_I', 'API_DA_S_II']]\n",
     "identificador_columnas=identificador_columnas.dropna()\n",
     "identificador_columnas=identificador_columnas.set_index('Unificado')\n",
     "identificador_columnas.drop('Fuente',axis=0,inplace=True)\n",
     "identificador_datos={'SECOP I':'f789-7hwg','SECOP II':'jbjy-vk9h','TVEC':'rgxm-mmea'}\n",
-    "valor_columnas={'SECOP I':valor_columnas[i],'SECOP II':'API_DA_S_II','TVEC':'API_DA_S_TVEC'}\n",
+    "valor_columnas={'SECOP I':'API_DA_S_I','SECOP II':'API_DA_S_II','TVEC':'API_DA_S_TVEC'}\n",
     "### Definición de cliente para Socrata\n",
     "\n",
     "cliente=Socrata('www.datos.gov.co',None,timeout=1000000)\n"
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +249,7 @@
        "URL                                             urlproceso  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,15 +272,16 @@
     "        {2} as entidad,\n",
     "        {3} as departamento_entidad,\n",
     "        {4} as orden,\n",
+    "        {5} as nit_entidad,\n",
     "        count({0}) as cantidad,\n",
     "        sum({1}) as suma_valor_contrato\n",
     "    Group by \n",
-    "        {2},{3},{4}\n",
+    "        {2},{3},{4},{5}\n",
     "    LIMIT \n",
     "        1000000\n",
     "    \"\"\".format(identificador_columnas[valor_columnas[i]]['ID Contrato'],identificador_columnas[valor_columnas[i]]['Valor del contrato'],\n",
     "    identificador_columnas[valor_columnas[i]]['Entidad'],identificador_columnas[valor_columnas[i]]['Departamento Entidad'],\n",
-    "    identificador_columnas[valor_columnas[i]]['Orden'])\n",
+    "    identificador_columnas[valor_columnas[i]]['Orden'],identificador_columnas[valor_columnas[i]]['NIT Entidad'])\n",
     "    Queries_list.append(query_SECOP)\n",
     "    results_detalle = cliente.get(identificador_datos[i], query=query_SECOP)\n",
     "    results.append(results_detalle)\n"
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -886,12 +888,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "56c061c6a3605692dd8f68d833a6cd95e25f484a98386b6702ce308f04d6b922"
+    "hash": "7b7015134b0c30094ddb8e69f25e0f13a7d5f157e2cc56c7f71bb28784c4e96c"
    }
   }
  },
