modificados:     Consulta_bases_creadas.ipynb 	modificados:     Elementos interactivos.ipynb 	renombrados:     "Genereaci\303\263n_bases_maestras.ipynb" -> "Generaci\303\263n_bases_maestras.ipynb" 	modificados:     __pycache__/col_consulta.cpython-310.pyc 	modificados:     col_consulta.py

--- a/Generación_bases_maestras.ipynb
+++ b/Generación_bases_maestras.ipynb
@@ -4,6 +4,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"\n",
+    "  padding: 30px;\n",
+    "  text-align: center;\" class='row'>\n",
+    "<div style=\"float:left;width: 15%;\" class='column'><a href=\"https://www.colombiacompra.gov.co\"><img alt=\"Logo Colombia Compra Eficiente\" id=\"logocce\" src=\"https://www.colombiacompra.gov.co/sites/cce_public/files/Images/logocce.png\" style=\"height: 45px;\"></a></div>\n",
+    "    <div style=\"float:left;width: 70%;\" class='column'>\n",
+    "        <h1>Generación de bases maestras para paquete de consulta en datos abiertos\n",
+    "        </h1> \n",
+    "    </div>\n",
+    "<div style=\"float:left;width: 15%;\" class='column'><a href=\"https://www.dnp.gov.co/\" target=\"_blank\"><img class=\"float-right\" id=\"logodnp\" src=\"https://www.colombiacompra.gov.co/sites/cce_public/files/logo_dnp.jpg\" style=\"width: 200px;\"></a></div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. IDENTIFICACIÓN DEL INSUMO\n",
+    "\n",
+    "|||\n",
+    "|:--|:--|\n",
+    "|**Fecha**|Octubre 2022|\n",
+    "|**Ciudad**|Bogotá D.C.|\n",
+    "|**Esquema de presentación del insumo**|Cuaderno Jupyter|\n",
+    "|**Título del insumo**| **Generación de bases maestras para paquete de consulta en datos abiertos**|\n",
+    "|**Descripción y alcance**|Script para generar bases maestras para paquete de consulta en datos abiertos.|\n",
+    "|**Periodicidad del insumo**|único|\n",
+    "|**Solicitante**|No aplica|\n",
+    "|**Versión del insumo**|Final|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. DESTINO Y AUTORES DEL INFORME / INSUMO\n",
+    "\n",
+    "|||\n",
+    "|:--|:--|\n",
+    "|**Destinatario**|<table align='left'><tr><td>Nombre:</td> <td>Equipo analítica EMAE</td></tr> <tr><td>Cargo:</td> <td>NA</td></tr>  <tr><td>Área:</td> <td>Subdirección de estudios de Mercado y Abastecimiento Estratégico – EMAE</td></tr></table>|\n",
+    "|**Autores**|<table><tr><td>Nombre:</td> <td>Carlos Isaac Zainea Maya</td></tr> <tr><td>Cargo:</td> <td>Contratista</td></tr>  <tr><td>Área:</td> <td>Subdirección de estudios de Mercado y Abastecimiento Estratégico – EMAE.</td></tr></table>|\n",
+    "|**Aprobación**|<table><tr><td>Nombre:</td> <td>Catalina Pimienta</td></tr> <tr><td>Cargo:</td> <td>Subdirectora Estudios de Mercado y Abastecimiento Estratégico</td></tr>  <tr><td>*Área:*</td> <td>Subdirección de estudios de Mercado y Abastecimiento Estratégico – EMAE.</td></tr></table>|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Análisis de oferta\n",
     "\n",
     "Solución para hacer análisis de oferta del modelo de abastecimiento estratégico."
@@ -138,11 +185,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Aprobación\n",
+    "|||\n",
+    "|--|--|\n",
+    "|**Nombre**|Wilson Camilo Sanchez|\n",
+    "|**Cargo**|Gestor T11|\n",
+    "|**Área**|Subdirección EMAE|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![version](https://github.com/ANCP-CCE-Analitica/datos_abiertos/blob/main/images/version.png?raw=1)"
+   ]
   }
  ],
  "metadata": {
